[package]
name = "tibba-model"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "model"]
description = "model for tibba"


[lib]
name = "tibba_model"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
sqlx = { workspace = true }
substring = { workspace = true }
tokio = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.6" }
# 密码入库前做 Argon2id 哈希（register / update_password）
tibba-crypto = { path = "../tibba-crypto", version = "0.2.6" }
time = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
