[package]
name = "tibba-notify"
version = "0.2.2"
edition = "2024"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/tibba"
repository = "https://github.com/vicanso/tibba"
keywords = ["tibba", "notify", "wecom", "email"]
description = "unified notifier trait for tibba (email + wecom + ...)"


[lib]
name = "tibba_notify"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
snafu = { workspace = true }
tibba-email = { path = "../tibba-email", version = "0.2.2" }
tibba-error = { path = "../tibba-error", version = "0.2.2" }
tibba-request = { path = "../tibba-request", version = "0.2.2" }
tracing = { workspace = true }
