[package]
name = "tibba-notify"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "notify", "wecom", "email"]
description = "unified notifier trait for tibba (email + wecom + ...)"


[lib]
name = "tibba_notify"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
snafu = { workspace = true }
tibba-email = { path = "../tibba-email", version = "0.2.5" }
tibba-error = { path = "../tibba-error", version = "0.2.5" }
tibba-request = { path = "../tibba-request", version = "0.2.5" }
tracing = { workspace = true }
