[package]
name = "tibba-oauth"
version = "0.2.2"
edition = "2024"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/tibba"
repository = "https://github.com/vicanso/tibba"
keywords = ["tibba", "oauth", "github"]
description = "oauth provider clients for tibba (github, ...)"


[lib]
name = "tibba_oauth"
path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.2" }
tracing = { workspace = true }
urlencoding = { workspace = true }
