[package]
name = "tibba-oauth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "oauth", "github"]
description = "oauth provider clients for tibba (github, ...)"


[lib]
name = "tibba_oauth"
path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.6" }
tracing = { workspace = true }
urlencoding = { workspace = true }
