[package]
name = "tibba-opendal"
version = "0.1.0"
edition = "2024"

[lib]
name = "tibba_opendal"
path = "src/lib.rs"

[dependencies]
opendal = { workspace = true }
snafu = { workspace = true }
tibba-config = { path = "../tibba-config" }
tibba-error = { path = "../tibba-error" }
url = { workspace = true }
validator = { workspace = true }
