[package]
name = "tibba-opendal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "opendal"]
description = "opendal for tibba"

[lib]
name = "tibba_opendal"
path = "src/lib.rs"

[dependencies]
dirs = { workspace = true }
opendal = { workspace = true }
path-absolutize = { workspace = true }
snafu = { workspace = true }
serde = { workspace = true }
tibba-config = { path = "../tibba-config", version = "0.2.5" }
tibba-error = { path = "../tibba-error", version = "0.2.5" }
tibba-util = { path = "../tibba-util", version = "0.2.5" }
validator = { workspace = true }
