[package]
name = "tibba-performance"
version = "0.1.0"
edition = "2024"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/tibba"
repository = "https://github.com/vicanso/tibba"
keywords = ["tibba", "performance"]
description = "performance for tibba"

[lib]
name = "tibba_performance"
path = "src/lib.rs"

[dependencies]
cached = { workspace = true }
serde = { workspace = true }
sysinfo = { workspace = true }
