[package]
name = "tibba-performance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "performance"]
description = "performance for tibba"

[lib]
name = "tibba_performance"
path = "src/lib.rs"

[dependencies]
cached = { workspace = true }
serde = { workspace = true }
sysinfo = { workspace = true }
