[package]
name = "tibba-rbac"
version = "0.2.2"
edition = "2024"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/tibba"
repository = "https://github.com/vicanso/tibba"
keywords = ["tibba", "rbac", "auth"]
description = "rbac middleware for tibba"


[lib]
name = "tibba_rbac"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
snafu = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.2" }
tibba-session = { path = "../tibba-session", version = "0.2.2" }

[dev-dependencies]
http-body-util = "0.1.3"
tokio = { workspace = true }
tower = { workspace = true }
