[package]
name = "tibba-rbac"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "rbac", "auth"]
description = "rbac middleware for tibba"


[lib]
name = "tibba_rbac"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
snafu = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.6" }
tibba-session = { path = "../tibba-session", version = "0.2.6" }

[dev-dependencies]
http-body-util = "0.1.3"
tokio = { workspace = true }
tower = { workspace = true }
