[package]
name = "tibba-request"
version = "0.1.0"
edition = "2024"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/tibba"
repository = "https://github.com/vicanso/tibba"
keywords = ["tibba", "request"]
description = "request for tibba"

[lib]
name = "tibba_request"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.1.0" }
tibba-util = { path = "../tibba-util", version = "0.1.2" }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
