[package]
name = "tibba-request"
version = "0.2.2"
edition = "2024"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/tibba"
repository = "https://github.com/vicanso/tibba"
keywords = ["tibba", "request"]
description = "request for tibba"

[lib]
name = "tibba_request"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.2" }
tibba-util = { path = "../tibba-util", version = "0.2.2" }
# 重试退避需要定时器，workspace 默认未启用 tokio 的 time 特性，这里单独开启
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
# 出站请求注入 W3C traceparent，串联下游服务调用链（分布式追踪）
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
