[package]
name = "tibba-request"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "request"]
description = "request for tibba"

[lib]
name = "tibba_request"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.6" }
tibba-util = { path = "../tibba-util", version = "0.2.6" }
# net：SSRF 防护需 lookup_host 解析目标域名。time：重试退避的定时器。
# workspace 默认未启用这两个特性，这里单独开启
tokio = { workspace = true, features = ["time", "net"] }
tracing = { workspace = true }
# 出站请求注入 W3C traceparent，串联下游服务调用链（分布式追踪）
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
