[package]
name = "tibba-router-common"
version = "0.1.0"
edition = "2024"


[lib]
name = "tibba_router_common"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
base64 = { workspace = true }
captcha = { workspace = true }
hostname = "0.4.1"
humantime = { workspace = true }
os_info = { workspace = true }
serde = { workspace = true }
tibba-cache = { path = "../tibba-cache" }
tibba-error = { path = "../tibba-error" }
tibba-state = { path = "../tibba-state" }
tibba-util = { path = "../tibba-util" }
validator = { workspace = true }
