[package]
name = "tibba-router-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "router", "common"]
description = "common router for tibba"


[lib]
name = "tibba_router_common"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
base64 = { workspace = true }
captcha = { workspace = true }
hostname = { workspace = true }
humantime = { workspace = true }
image = { workspace = true }
os_info = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
tibba-cache = { path = "../tibba-cache", version = "0.2.6" }
tibba-error = { path = "../tibba-error", version = "0.2.6" }
tibba-performance = { path = "../tibba-performance", version = "0.2.6" }
# /commons/application 暴露内部运行时信息，用 AdminSession 门控
tibba-session = { path = "../tibba-session", version = "0.2.6" }
tibba-state = { path = "../tibba-state", version = "0.2.6" }
tibba-util = { path = "../tibba-util", version = "0.2.6" }
tokio = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
validator = { workspace = true }
