[package]
name = "tibba-router-file"
version = "0.2.0"
edition = "2024"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/tibba"
repository = "https://github.com/vicanso/tibba"
keywords = ["tibba", "router", "file"]
description = "file router for tibba"


[lib]
name = "tibba_router_file"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
image = { workspace = true }
imageoptimize = "0.4.1"
mime_guess2 = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.0" }
tibba-model = { path = "../tibba-model", version = "0.2.0" }
tibba-opendal = { path = "../tibba-opendal", version = "0.2.0" }
tibba-session = { path = "../tibba-session", version = "0.2.0" }
tibba-util = { path = "../tibba-util", version = "0.2.0" }
tibba-validator = { path = "../tibba-validator", version = "0.2.0" }
validator = { workspace = true }
