[package]
name = "tibba-router-file"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "router", "file"]
description = "file router for tibba"


[lib]
name = "tibba_router_file"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
image = { workspace = true }
imageoptimize = "0.4.1"
mime_guess2 = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
sqlx = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.6" }
tibba-model-builtin = { path = "../tibba-model-builtin", version = "0.2.6" }
tibba-opendal = { path = "../tibba-opendal", version = "0.2.6" }
tibba-session = { path = "../tibba-session", version = "0.2.6" }
tibba-util = { path = "../tibba-util", version = "0.2.6" }
tibba-validator = { path = "../tibba-validator", version = "0.2.6" }
utoipa = { workspace = true }
validator = { workspace = true }
