[package]
name = "tibba-router-model"
version = "0.2.0"
edition = "2024"

[lib]
name = "tibba_router_model"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.0" }
tibba-model = { path = "../tibba-model", version = "0.2.0" }
tibba-session = { path = "../tibba-session", version = "0.2.0" }
tibba-util = { path = "../tibba-util", version = "0.2.0" }
tibba-validator = { path = "../tibba-validator", version = "0.2.0" }
validator = { workspace = true }
