[package]
name = "tibba-router-model"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "router", "model"]
description = "model router for tibba"

[lib]
name = "tibba_router_model"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
sqlx = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.5" }
tibba-hook = { path = "../tibba-hook", version = "0.2.5" }
tibba-model = { path = "../tibba-model", version = "0.2.5" }
tibba-session = { path = "../tibba-session", version = "0.2.5" }
tibba-util = { path = "../tibba-util", version = "0.2.5" }
tibba-validator = { path = "../tibba-validator", version = "0.2.5" }
utoipa = { workspace = true }
validator = { workspace = true }
