[package]
name = "tibba-router-schema"
version = "0.1.0"
edition = "2024"

[lib]
name = "tibba_router_schema"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
validator = { workspace = true }
tibba-model = { path = "../tibba-model" }
tibba-util = { path = "../tibba-util" }
tibba-validator = { path = "../tibba-validator" }
