[package]
name = "tibba-router-user"
version = "0.2.2"
edition = "2024"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/tibba"
repository = "https://github.com/vicanso/tibba"
keywords = ["tibba", "router", "user"]
description = "user router for tibba"

[lib]
name = "tibba_router_user"
path = "src/lib.rs"


[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
sqlx = { workspace = true }
tibba-cache = { path = "../tibba-cache", version = "0.2.2" }
tibba-error = { path = "../tibba-error", version = "0.2.2" }
tibba-middleware = { path = "../tibba-middleware", version = "0.2.2" }
tibba-model = { path = "../tibba-model", version = "0.2.2" }
tibba-model-builtin = { path = "../tibba-model-builtin", version = "0.2.2" }
tibba-session = { path = "../tibba-session", version = "0.2.2" }
tibba-util = { path = "../tibba-util", version = "0.2.2" }
tibba-validator = { path = "../tibba-validator", version = "0.2.2" }
validator = { workspace = true }
