[package]
name = "tibba-scheduler"
version = "0.2.0"
edition = "2024"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/tibba"
repository = "https://github.com/vicanso/tibba"
keywords = ["tibba", "scheduler"]
description = "scheduler for tibba"

[lib]
name = "tibba_scheduler"
path = "src/lib.rs"


[dependencies]
dashmap = { workspace = true }
snafu = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.0" }
tokio-cron-scheduler = { workspace = true }
tracing = { workspace = true }
