[package]
name = "tibba-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "scheduler"]
description = "scheduler for tibba"

[lib]
name = "tibba_scheduler"
path = "src/lib.rs"


[dependencies]
dashmap = { workspace = true }
snafu = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.6" }
tokio-cron-scheduler = { workspace = true }
tracing = { workspace = true }
